--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,21 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    # - images/a_dot_burr.jpeg
+    # - images/a_dot_ham.jpeg
+    - assets/images/avatar1.png
+    - assets/images/avatar2.png
+    - assets/images/avatar3.png
+    - assets/images/avatar4.png
+    - assets/images/avatar11.png
+    - assets/images/avatar12.png
+    - assets/images/avatar13.png
+    - assets/images/avatar14.png
+    - assets/images/avatar21.png
+    - assets/images/avatar22.png
+    - assets/images/avatar23.png
+    - assets/images/avatar24.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
