--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  provider: ^6.1.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,19 +63,7 @@ flutter:
   assets:
     # - images/a_dot_burr.jpeg
     # - images/a_dot_ham.jpeg
-    - assets/images/avatar_default.png
-    - assets/images/avatar1.png
-    - assets/images/avatar2.png
-    - assets/images/avatar3.png
-    - assets/images/avatar4.png
-    - assets/images/avatar11.png
-    - assets/images/avatar12.png
-    - assets/images/avatar13.png
-    - assets/images/avatar14.png
-    - assets/images/avatar21.png
-    - assets/images/avatar22.png
-    - assets/images/avatar23.png
-    - assets/images/avatar24.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
